syntax = "proto2";

package tracing;

option go_package = "github.com/ydb-platform/nbs/cloud/tasks/tracing/config";

////////////////////////////////////////////////////////////////////////////////

message TracingConfig {
    optional string ServiceName = 1 [default = "disk-manager"];
    optional uint32 Port = 2 [default = 7881];
}
